fixed shift key and table header scroll.

--- a/css/custom.css
+++ b/css/custom.css
@@ -353,20 +353,3 @@ td, th {
 .dataTables_filter{
     display: none;
 }
-
-.tblDataTable thead{
-    position: -webkit-sticky;
-position: -moz-sticky;
-position: -ms-sticky;
-position: -o-sticky;
-position: sticky;
-top: 0;
-}
-
-.tblDataTable tfoot{
-    position: -webkit-sticky;
-position: -moz-sticky;
-position: -ms-sticky;
-position: -o-sticky;
-position: sticky;
-}
